# ofd-rs

./: Cargo.toml  LICENSE  README.md
examples/: image_to_ofd.rs
src/: lib.rs  types.rs
src/model/: document.rs  graphic.rs  mod.rs  ofd.rs  page.rs  resource.rs
src/writer/: builder.rs  mod.rs  xml_gen.rs
tests/: write_image.rs
